--- a/hrms_project/employees/templates/employees/base.html
+++ b/hrms_project/employees/templates/employees/base.html
@@ -68,11 +68,11 @@
                             <span class="nav-link">Welcome, {{ user.username }}</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-link" href="{% url 'core:logout' %}">Logout</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'core:login' %}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
