--- a/hrms_project/attendance/templates/attendance/base.html
+++ b/hrms_project/attendance/templates/attendance/base.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
 
-{% block head_extras %}
+{% block extra_css %}
 <!-- FullCalendar CSS -->
 <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.css" rel="stylesheet" />
@@ -71,7 +71,7 @@
 </div>
 {% endblock %}
 
-{% block footer_scripts %}
+{% block extra_js %}
 <!-- FullCalendar JS -->
 <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.js"></script>
